--- a/style/Illustration.css
+++ b/style/Illustration.css
@@ -9,7 +9,7 @@ margin: 20px;
 
 .Header {
 background-color: #FFCE2C;
-background-image: url("/home/fernando/Desktop/WEB/Img/home/peg.jpg");
+background-image: url("Img/home/peg.jpg");
 background-repeat: no-repeat;
 background-size: 1400px 120px;
 background-position: center;
